<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/settings_title" >

        <!--
        <EditTextPreference
            android:key="default_openhab_url"
            android:summary="@string/settings_openhab_url_summary"
            android:title="@string/settings_openhab_url" />
        <EditTextPreference
            android:defaultValue="http://192.168.18.24:8080/"
            android:key="default_openhab_alturl"
            android:summary="@string/settings_openhab_alturl_summary"
            android:title="@string/settings_openhab_alturl" />
        <EditTextPreference
            android:key="default_openhab_username"
            android:summary="@string/settings_openhab_username_summary"
            android:title="@string/settings_openhab_username" />
        <EditTextPreference
            android:inputType="textPassword"
            android:key="default_openhab_password"
            android:summary="@string/settings_openhab_password_summary"
            android:title="@string/settings_openhab_password" />
        -->
        
        <EditTextPreference
            android:key="default_openhab_url"
            android:defaultValue="@string/settings_default_openhab_url_value"
            android:summary="@string/settings_openhab_url_summary"
            android:title="@string/settings_openhab_url" />

        <Preference
            android:key="room_setting"
            android:summary="@string/settings_room_summary"
            android:title="@string/settings_room_title" >
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>